fix(summary-card): fix action overflow

--- a/src/components/SummaryCard/_mixins.scss
+++ b/src/components/SummaryCard/_mixins.scss
@@ -56,7 +56,7 @@
   display: flex;
   height: $header--height + $body--height + $footer--height;
   min-width: carbon--mini-units($count: 36);
-  overflow-y: hidden;
+  overflow: hidden;
   flex-direction: column;
 
   &__container {
